--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,7 @@
 body {
-	font-family: 'Roboto', sans-serif;
-	background: #D7FFCF;
+	font-family: 'Helvetica', sans-serif;
+	 background-image:url("http://moviemarker.co.uk/wp-content/uploads/the-walking-dead-season-8-netflix.jpg");
+	 background-size: cover;
 }
 
 .site {
@@ -19,6 +20,7 @@ h1 {
 	text-align: center;
 	margin-top: 75px;
 	margin-bottom: 20px;
+	
 }
 
 p {
@@ -31,7 +33,7 @@ p {
 
 footer {
 	text-align: right;
-	background: #fff;
+	background: #orange;
 	padding: 30px;
 	-webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.2);
 	-moz-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.2);
@@ -47,7 +49,7 @@ form {
 }
 
 a {
-	color: #5cb85c;
+	color:  #5cb85c;
 	font-size: 20px;
 }
 
@@ -63,7 +65,7 @@ a {
 span {
 	margin-left: 10px;
 	margin-right: 10px;
-	color: #777;
+	color: #black;
 	font-size: 20px;
 
 }
