--- a/app/css/style.css
+++ b/app/css/style.css
@@ -15,12 +15,13 @@ body {
 }
 
 h1 {
-	font-family: 'Baloo', cursive;
+	font-family: 'Helvetica', cursive;
 	font-size: 4em;
 	text-align: center;
 	margin-top: 75px;
 	margin-bottom: 20px;
-	
+	color: white;
+
 }
 
 p {
@@ -29,6 +30,7 @@ p {
 	line-height: 1.75;
 	margin: auto;
 	font-size: 1.2em;
+	color: silver;
 }
 
 footer {
